Bug 27281 - readelf: SHF_GNU_RETAIN ('R') is not listed in `Key to Flags:`
Summary: readelf: SHF_GNU_RETAIN ('R') is not listed in `Key to Flags:`
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.37
: P2 normal
Target Milestone: 2.37
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-30 02:41 UTC by Fangrui Song
Modified: 2021-02-02 17:24 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed: 2021-01-30 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fangrui Song 2021-01-30 02:41:15 UTC
Example readelf -WS output:

Section Headers:
  [Nr] Name              Type            Address          Off    Size   ES Flg Lk Inf Al
...
  [ 4] .orphaned_section PROGBITS        0000000000000000 000040 000002 00 AXR  0   0  1
...
Key to Flags:
  W (write), A (alloc), X (execute), M (merge), S (strings), I (info),
  L (link order), O (extra OS processing required), G (group), T (TLS),
  C (compressed), x (unknown), o (OS specific), E (exclude),
  l (large), p (processor specific)
Comment 1 Sourceware Commits 2021-02-02 13:17:23 UTC
The master branch has been updated by H.J. Lu <hjl@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=5424d7ed94cf5a7ca24636ab9f4e6d5c353fc0d3

commit 5424d7ed94cf5a7ca24636ab9f4e6d5c353fc0d3
Author: H.J. Lu <hjl.tools@gmail.com>
Date:   Tue Feb 2 05:14:48 2021 -0800

    readelf: Add 'R' and 'D' to "Key to Flags:"
    
    Add "R (retain)" and "D (mbind)" to "Key to Flags:".
    
            PR binutils/27281
            * readelf.c (process_section_headers): Add 'R' and 'D' to
            "Key to Flags:".
            * testsuite/binutils-all/retain1a.d: Updated.
Comment 2 H.J. Lu 2021-02-02 17:24:28 UTC
Fixed for 2.37.